<resources>
    <string name="app_name">Baby Memo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome to BabyMemo!</string>
    <string name="name_label">Baby Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="title_activity_memo">MemoActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
